--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/hero.css">
-    <link rel="stylesheet" href="./css/searchbar.css" />
-    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/hero.css">
+    <link rel="stylesheet" href="./styles/searchbar.css" />
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/about-us.css">
 
     <!-- Custom Script -->
-    <script defer src="./js/navbar.js"></script>
+    <script defer src="./scripts/navbar.js"></script>
 
     <!-- CDN Link -->
     <script
@@ -31,7 +32,7 @@
     <nav class="navbar">
       <div class="nav-content">
         <a href="#" class="logo">
-          <img src="./assets/brand/crab-logo.svg" alt="Mudcrab Logo">
+          <img src="./images/crab-logo.svg" alt="Mudcrab Logo">
         </a>
 
         <div class="nav-icon">
@@ -79,7 +80,29 @@
         </div>
     </div>
 
+    <!-- About Us Section -->
+    <!-- <div class="about-section">
+      <h2 class="about-title">About Us</h2>
+      <p class="about-text">We are a company that specializes in providing top-notch services and products. Our team is dedicated to ensuring customer satisfaction and we strive to exceed expectations. We have been in business for over 10 years and have a reputation for excellence. Learn more about our team and mission on this page.</p>
+      <div class="about-team">
+        <h3>Meet Our Team</h3>
+        <div class="about-team-member">
+          <img src="team-member-1.jpg" alt="Team Member 1">
+          <h4>John Doe</h4>
+          <p>Founder and CEO</p>
+        </div>
+        <div class="about-team-member">
+          <img src="team-member-2.jpg" alt="Team Member 2">
+          <h4>Jane Smith</h4>
+          <p>Head of Sales</p>
+        </div>
+        <div class="about-team-member">
+          <img src="team-member-3.jpg" alt="Team Member 3">
+          <h4>Bob Johnson</h4>
+          <p>Head of Operations</p>
+        </div>
+      </div>
+    </div> -->
     
-
   </body>
 </html>
