--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mangrove Crab Analytics</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/hero.css">
@@ -73,7 +74,8 @@
     <div class="hero-section">
         <div class="hero-text">
           <p class="hero-subtitle">Tracking, monitoring and preserving</p>
-          <h1 class="hero-title">Your window to the world of <span>mangrove crabs</span>  with MCIS</h1>
+          <!-- <h1 class="hero-title">Your window to the world of <span>mangrove crabs</span>  with MCIS</h1> -->
+          <h1 class="hero-title">Exploring the World of Mangrove Crabs with our Comprehensive Information System</h1>
           <a class="hero-cta" href="#about">
             <p>Learn more <i class="fa-solid fa-chevron-right"></i></p>
           </a>
