--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p class="hero-subtitle">Tracking, monitoring and preserving</p>
           <!-- <h1 class="hero-title">Your window to the world of <span>mangrove crabs</span>  with MCIS</h1> -->
           <h1 class="hero-title">Exploring the World of Mangrove Crabs with our Comprehensive Information System</h1>
-          <a class="hero-cta" href="#about">
+          <a class="hero-cta" href="#learn-more">
             <p>Learn more <i class="fa-solid fa-chevron-right"></i></p>
           </a>
         </div>
