--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mangrove Crab Analytics</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <!-- Custom CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/searchbar.css" />
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/about-us.css">
-
     <!-- Custom Script -->
     <script defer src="./scripts/navbar.js"></script>
-
-    <!-- CDN Link -->
+    <!-- Font Aweseome CDN Link -->
     <script
       defer
       src="https://kit.fontawesome.com/444873800b.js"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Google Dont  -->
+    <!-- Google Font CDN lINK -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -73,9 +70,9 @@
     <!-- Hero section -->
     <div class="hero-section">
         <div class="hero-text">
-          <p class="hero-subtitle">Tracking, monitoring and preserving</p>
+          <p class="hero-subtitle">Tracking monitoring and preserving</p>
           <!-- <h1 class="hero-title">Your window to the world of <span>mangrove crabs</span>  with MCIS</h1> -->
-          <h1 class="hero-title">Exploring the World of Mangrove Crabs with our Comprehensive Information System</h1>
+          <h1 class="hero-title">Exploring the World of Mangrove Crabs <span>with our Comprehensive Information System</span> </h1>
           <a class="hero-cta" href="#learn-more">
             <p>Learn more <i class="fa-solid fa-chevron-right"></i></p>
           </a>
