--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- <h1 class="hero-title">Your window to the world of <span>mangrove crabs</span>  with MCIS</h1> -->
         <h1 class="hero-title">
           Exploring the World of Mangrove Crabs
-          <span>with our Comprehensive Information System</span>
+          <span></span>
         </h1>
         <a class="hero-cta" href="#learn-more">
           <p>Learn more <i class="fa-solid fa-chevron-right"></i></p>
