--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mangrove Crab Analytics</title>
+    <meta
+      name="description"
+      content="Mangrove Crab Information System, MCIS, Web Development, Web Design"
+    />
+    <meta name="author" content="Reymar Mirante" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <title>Mangrove Crab Analytics</title>
+
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/hero.css" />
     <link rel="stylesheet" href="./styles/searchbar.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/about-us.css" />
+
     <!-- Custom Script -->
     <script defer src="./scripts/navbar.js"></script>
+
     <!-- Font Aweseome CDN Link -->
     <script
       defer
