--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Mangrove Crab Information System, MCIS, Web Development, Web Design"
     />
     <meta name="author" content="Reymar Mirante" />
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>Mangrove Crab Analytics</title>
 
     <!-- CSS -->
@@ -71,7 +71,7 @@
               <a href="#">Contact</a>
             </li>
             <li>
-              <a href="#">Sign in</a>
+              <a href="login.html">Sign in</a>
             </li>
             <li>
               <a href="#">Sign up</a>
