--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
           <a href="#" class="secondary-btn">Create an account</a>
         </section>
         <footer class="main-footer">
-          <p>Copyright &copy; 2022 Sluralpright Inc. All Rights Reserved</p>
+          <p>Copyright &copy; 2022 MangroveCrabs Inc. All Rights Reserved</p>
           <nav>
             <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a>
           </nav>
