--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="#">Register</a>
               </li>
               <li>
-                <a href="#">Log in</a>
+                <a href="login.html">Log in</a>
               </li>
             </ul>
           </div>
@@ -135,7 +135,7 @@
                 <a href="#">Register</a>
               </li>
               <li>
-                <a href="#">Log in</a>
+                <a href="login.html">Log in</a>
               </li>
             </ul>
           </div>
@@ -147,7 +147,6 @@
     <div class="hero">
       <div class="hero__text">
         <p class="hero__subtitle">Tracking monitoring and preserving</p>
-        <!-- <h1 class="hero-title">Your window to the world of <span>mangrove crabs</span>  with MCIS</h1> -->
         <h1 class="hero__title">
           Exploring the World of Mangrove Crabs
           <span></span>
@@ -157,5 +156,6 @@
         </a>
       </div>
     </div>
+
   </body>
 </html>
