--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
           </form>
           <div class="links">
             <a href="#">Forgot Password?</a>
-            <a href="#">Sign in with company or school</a>
+            <a href="register.html">New here? Create an account.</a>
           </div>
           <div class="or">
             <hr class="bar" role="separator" aria-hidden="true" />
