--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./scripts/analytics.js"></script>
+    <script defer src="./scripts/dashboard.js"></script>
   </head>
   <body>
     <div class="container">
@@ -35,7 +36,7 @@
             <img src="./images/crab-logo.svg" alt="" />
             <h2>Mangrove <span>Crab</span></h2>
           </div>
-          <div class="close" id="close-btn ">
+          <div class="close" id="close-btn">
             <span class="material-icons-sharp"> close </span>
           </div>
         </div>
@@ -147,9 +148,9 @@
       </main>
       <div class="right">
         <div class="top">
-          <buton id="menu-btn">
+          <button id="menu-btn">
             <span class="material-icons-sharp">menu</span>
-          </buton>
+          </button>
           <div class="theme-toggler">
             <span class="material-icons-sharp active">light_mode</span>
             <span class="material-icons-sharp">dark_mode</span>
@@ -208,6 +209,34 @@
             <div class="right">
             <div class="info">
               <h3>ONLINE ORDERS</h3>
+              <small class "text-muted" >Last 24 Hours</small>
+            </div>
+            <h5 class="success">+39%</h5>
+            <h3> 3849</h3>
+            </div>
+          </div>
+          <div class="item offline">
+            <div class="icon">
+              <span class="material-icons-sharp">shopping_cart</
+              <span>
+            </div>
+            <div class="right">
+              <div class="info">
+                <h3>OFFLINE ORDERS</h3>
+                <small class "text-muted" >Last 24 Hours</small>
+              </div>
+              <h5 class="danger">+39%</h5>
+              <h3> 3849</h3>
+            </div>
+          </div>
+          <div class="item customers">
+            <div class="icon">
+              <span class="material-icons-sharp">shopping_cart</
+              <span>
+            </div>
+            <div class="right">
+            <div class="info">
+              <h3>NEW CUSTOMERS</h3>
               <small class "text-muted" >Last 24 Hours</small>
             </div>
             <h5 class="success">+39%</h5>
