--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </a>
             </li>
             <li>
-              <a href="#">Dashboard</a>
+              <a href="dashboard.html">Dashboard</a>
             </li>
             <li>
               <a href="#">Analytics</a>
@@ -156,6 +156,10 @@
         </a>
       </div>
     </div>
+    <!-- Why Us -->
 
+    <!-- I Want to know more about mudcrabs with explore button-->
+
+    <!-- FOOTER -->
   </body>
 </html>
