--- a/dashboard.html
+++ b/dashboard.html
@@ -49,6 +49,10 @@
             <span class="material-icons-sharp"> insights </span>
             <h3>Analytics</h3>
           </a>
+          <a href="index.html">
+            <span class="material-icons-sharp"> home </span>
+            <h3>Home</h3>
+          </a>
           <a href="#">
             <span class="material-icons-sharp"> group </span>
             <h3>About</h3>
