--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
-    <link rel="stylesheet" href="./styles/hero.css" />
+    <link rel="stylesheet" href="./styles/homepage.css" />
 
     <!-- Scripts -->
     <script defer src="./scripts/navbar.js"></script>
@@ -143,22 +143,80 @@
       </div>
       <div class="overlay"></div>
     </div>
-    <!-- Hero section -->
-    <div class="hero">
-      <div class="hero__text">
-        <p class="hero__subtitle">Tracking monitoring and preserving</p>
-        <h1 class="hero__title">
-          Exploring the World of Mangrove Crabs
-          <span></span>
-        </h1>
-        <a class="hero__cta" href="#learn-more">
-          <p>Learn more <i class="fa-solid fa-chevron-right"></i></p>
-        </a>
-      </div>
-    </div>
-    <!-- Why Us -->
+    <main id="content" class="content">
+      <article class="page-home">
+        <!-- =============== Hero section =================== -->
+        <section class="hero">
+          <div class="hero__text">
+            <p class="hero__subtitle">Tracking monitoring and preserving</p>
+            <h1 class="hero__title">
+              Exploring the World of Mangrove Crabs
+              <span></span>
+            </h1>
+            <a class="hero__cta" href="#learn-more">
+              <p>Learn more <i class="fa-solid fa-chevron-right"></i></p>
+            </a>
+          </div>
+        </section>
+        <!-- ===============  Why MCIS ============================= -->
+        <section class="why-mcis">
+          <div class="container">
+            <div class="section__text">
+              <p class="section__subtitle">What make us different</p>
+              <h2 class="section__title">Why MCIS</h2>
+            </div>
+            <div class="content">
+              <div class="left">
+                <div>
+                  <h3>Lorem Ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Suscipit harum saepe adipisci aliquam, sint officia
+                    laudantium consectetur dolores ut quibusdam!
+                  </p>
+                </div>
+                <div>
+                  <h3>Lorem Ipsum</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Asperiores architecto eligendi eos pariatur explicabo qui
+                    odit debitis molestiae adipisci quas?
+                  </p>
+                </div>
+              </div>
 
-    <!-- I Want to know more about mudcrabs with explore button-->
+              <div class="center">
+                <img class="img-one" src="./images/mangrove-1.jpg" alt="" />
+                <img
+                  class="img-two"
+                  src="./images/mangrove-crab-2.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="right">
+                <p>
+                  McrabIS is an information system designed to facilitate
+                  communication and interaction between various stakeholders
+                  involved in mangrove crab monitoring.
+                </p>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Dicta minus cum quos necessitatibus amet minima illo mollitia,
+                  sit repudiandae quibusdam eveniet laboriosam similique natus,
+                  adipisci sequi ex laudantium unde a. Quos cumque magnam quis
+                  non tempora rem esse autem dolorum amet repudiandae
+                  perspiciatis, consequatur accusantium, sit deserunt corrupti
+                  ut maxime?
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </article>
+
+      <!-- =============== End of Hero Section ============ -->
+      <article></article>
+    </main>
 
     <!-- FOOTER -->
   </body>
