--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="author" content="Reymar Mirante" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <title>Mangrove Crab Analytics</title>
+    <title>McrabIS</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
@@ -211,6 +211,15 @@
               </div>
             </div>
           </div>
+        </section>
+        <section class="about-crabs background">
+          <div class="about-crabs__text">
+            <p class="about-crabs__subtitle">I want to know</p>
+            <h2 class="about-crabs__title">Mangrove Crabs</h2>
+          </div>
+          <a class="about-crabs__cta" href="#">
+            <p>Learn more</p>
+          </a>
         </section>
       </article>
 
