--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,15 @@
     ></script>
     <script defer src="./scripts/analytics.js"></script>
     <script defer src="./scripts/dashboard.js"></script>
+    <!-- ChartJS -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js"
+      integrity="sha512-JPcRR8yFa8mmCsfrw4TNte1ZvF1e3+1SdGMslZvmrzDYxS69J7J49vkFL8u6u8PlPJK+H3voElBtUCzaXj+6ig=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script defer src="./scripts/chart.js"></script>
   </head>
   <body>
     <div class="container">
@@ -34,7 +43,7 @@
         <div class="top">
           <div class="logo">
             <img src="./images/crab-logo.svg" alt="" />
-            <h2>Mangrove <span>Crab</span></h2>
+            <h2>Mcrab<span>IS</span></h2>
           </div>
           <div class="close" id="close-btn">
             <span class="material-icons-sharp"> close </span>
@@ -73,182 +82,42 @@
       </aside>
       <!-- ======================== END OF ASIDE ======================== -->
       <main>
-        <h1>Dashboard</h1>
-
-        <div class="date">
-          <input type="date" name="" id="" />
+        <div class="flex">
+          <h1 class="main__title">Dashboard</h1>
+          <div class="dashboard__right">
+            <div class="top">
+              <button id="menu-btn">
+                <span class="material-icons-sharp">menu</span>
+              </button>
+              <div class="theme-toggler">
+                <span class="material-icons-sharp active">light_mode</span>
+                <span class="material-icons-sharp">dark_mode</span>
+              </div>
+              <div class="profile">
+                <div class="info">
+                  <p><b>Reymar</b></p>
+                  <small class="text-muted">Admin</small>
+                </div>
+                <div class="profile-photo">
+                  <img src="./images/pfp.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="insights">
-          <div class="sales">
-            <span class="material-icons-sharp">analytics</span>
-            <div class="middle">
-              <div class="left">
-                <h3>Total Sales</h3>
-                <h1>$25, 024</h1>
-              </div>
-              <div class="progress">
-                <svg>
-                  <circle cx="38" cy="38" r="36"></circle>
-                </svg>
-                <div class="number">
-                  <p>81%</p>
-                </div>
-              </div>
-            </div>
-            <small class="text-muted"> Last 24 Hours </small>
-          </div>
+        <div class="charts">
+          <div class="left"></div>
           <!-- =================== END OF SALES ================== -->
-          <div class="expenses">
-            <span class="material-icons-sharp">bar_chart</span>
-            <div class="middle">
-              <div class="left">
-                <h3>Total Expenses</h3>
-                <h1>$14, 024</h1>
-              </div>
-              <div class="progress">
-                <svg>
-                  <circle cx="38" cy="38" r="36"></circle>
-                </svg>
-                <div class="number">
-                  <p>62%</p>
-                </div>
-              </div>
-            </div>
-            <small class="text-muted"> Last 24 Hours </small>
-          </div>
+          <div class="center"></div>
           <!-- =================== END OF EXPENSES ================== -->
-          <div class="income">
-            <span class="material-icons-sharp">stacked_line_chart</span>
-            <div class="middle">
-              <div class="left">
-                <h3>Total Income</h3>
-                <h1>$10, 864</h1>
-              </div>
-              <div class="progress">
-                <svg>
-                  <circle cx="38" cy="38" r="36"></circle>
-                </svg>
-                <div class="number">
-                  <p>81%</p>
-                </div>
-              </div>
-            </div>
-            <small class="text-muted"> Last 24 Hours </small>
-          </div>
+          <div class="right"></div>
           <!-- =================== END OF INCOME ================== -->
         </div>
         <!-- =================== END OF INSIGHTS ===================== -->
 
         <!-- ================= Sample Analytics ====================== -->
-        <div class="analytics">
-          <canvas
-            class="my-4 w-100"
-            id="myChart"
-            width="900"
-            height="380"
-          ></canvas>
-        </div>
       </main>
-      <div class="right">
-        <div class="top">
-          <button id="menu-btn">
-            <span class="material-icons-sharp">menu</span>
-          </button>
-          <div class="theme-toggler">
-            <span class="material-icons-sharp active">light_mode</span>
-            <span class="material-icons-sharp">dark_mode</span>
-          </div>
-          <div class="profile">
-            <div class="info">
-              <p><b>Reymar</b></p>
-              <small class="text-muted">User</small>
-            </div>
-            <div class="profile-photo">
-              <img src="./images/pfp.jpg" alt="" />
-            </div>
-          </div>
-        </div>
-        <!-- END OF TOP -->
-        <div class="recent-updates">
-          <h2>Recent Updates</h2>
-          <div class="updates">
-            <div class="update">
-              <div class="profile-photo">
-                <img src="./images/pfp.jpg" alt="" />
-              </div>
-              <div class="message">
-                <p><b>Reymar</b> I like hansohee.</p>
-                <small class="text-muted">2 minutes Ago</small>
-              </div>
-            </div>
-            <div class="update">
-              <div class="profile-photo">
-                <img src="./images/pfp.jpg" alt="" />
-              </div>
-              <div class="message">
-                <p><b>Reymar</b> I like hansohee.</p>
-                <small class="text-muted">2 minutes Ago</small>
-              </div>
-            </div>
-            <div class="update">
-              <div class="profile-photo">
-                <img src="./images/pfp.jpg" alt="" />
-              </div>
-              <div class="message">
-                <p><b>Reymar</b> I like hansohee.</p>
-                <small class="text-muted">2 minutes Ago</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- =========== END OF RECENT UPDATES ================ -->
-        <div class="sales-analytics">
-          <h2>Sales Analytics</h2>
-          <div class="item online">
-            <div class="icon">
-              <span class="material-icons-sharp">shopping_cart</
-              <span>
-            </div>
-            <div class="right">
-            <div class="info">
-              <h3>ONLINE ORDERS</h3>
-              <small class "text-muted" >Last 24 Hours</small>
-            </div>
-            <h5 class="success">+39%</h5>
-            <h3> 3849</h3>
-            </div>
-          </div>
-          <div class="item offline">
-            <div class="icon">
-              <span class="material-icons-sharp">shopping_cart</
-              <span>
-            </div>
-            <div class="right">
-              <div class="info">
-                <h3>OFFLINE ORDERS</h3>
-                <small class "text-muted" >Last 24 Hours</small>
-              </div>
-              <h5 class="danger">+39%</h5>
-              <h3> 3849</h3>
-            </div>
-          </div>
-          <div class="item customers">
-            <div class="icon">
-              <span class="material-icons-sharp">shopping_cart</
-              <span>
-            </div>
-            <div class="right">
-            <div class="info">
-              <h3>NEW CUSTOMERS</h3>
-              <small class "text-muted" >Last 24 Hours</small>
-            </div>
-            <h5 class="success">+39%</h5>
-            <h3> 3849</h3>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </body>
 </html>
